--- a/assets/sorteio.css
+++ b/assets/sorteio.css
@@ -1,13 +1,163 @@
 @charset "utf-8";
+
 body{
-
+    margin: 0%;
+    padding: 0%;
+    background-color:#e4ddd6;
 }
+
+/*
+INICIO 
+DO 
+HEADER */
+
 header{
+    margin: 0% 0%;
+    padding: 2% 4%;
+    border-bottom: 1px solid black;
+    background-color:#c4ddd6; 
+}
+
+.flex-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    margin: 5px 5px;
+    padding: 0px;
+  }
+  
+  .flex-img {
+  box-sizing: border-box;
+  margin: 0px 50px;
+  max-width: 200px;
+  max-height: 400px;
+  width: auto;
+  height: auto;
+  padding: 50px 50px;
+  margin: 20px 0;
+  }
+  .flex-img > img{
+  max-width: 100px;
+  max-height: 100px;
+  width: auto;
+  height: auto;
+  }
+      
+  .logo-container {
+  box-sizing: border-box;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px 20px;
+  margin: 20px 0;
+  max-width: 400px;
+  max-height: 400px;
+  }
+
+  .flex-img > img {
+  min-height: 100px;
+  min-width: 200px;
+  border-radius: 40px;
+  }
+  
+  .btn-menu{
+      margin: 0px 50px;
+      box-sizing: border-box;
+      padding: 50px 50px;
+  margin: 20px 0;
+  }
+  .btn-menu > img {
+  max-width: 10px;
+  max-height: 10px;
+  width: auto;
+  height: auto;
+  border-radius: 40px;
+  }
+
+/* 
+INICIO
+DO 
+MAIN */
+
+main {
+    margin: 0% 5%;
+    padding: 1% 2%;
+    border-bottom: 1px solid black;
+    overflow-x: hidden;
+}
+
+.grid-main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 5px;
+}
+
+.grid-item {
+  background-color: #e4ddd6;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 30px;
+  border: 1px solid black;
 
 }
-main{
+.grid-item>img {
+  margin: 0% 10px;
+  max-width: 100px;
+  max-height: 100px;
+  width: auto;
+  height: auto;
+  border-radius: 4rem;
+  float: left;
+}
+
+.grid-item>p {
+  margin: 2px 10px;
+  float: right;
+}
+
+@media screen and (max-width: 1400px) {
+  .grid-main {
+    grid-template-columns: auto;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .btn-menu {
+    display: none;
+  }
 
 }
-footer{
 
-}
+/* 
+INICIO 
+DO 
+FOOTER */
+
+footer {
+    margin: 0% 0%;
+    padding: 0% 0%;
+    }
+    .grid-ul {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 5px;
+        
+    }
+    .grid-item {
+        padding: 5px;
+        font-size: 20px;
+        
+    }
+    .item > ul{
+        list-style-type: none;
+        text-align: center;
+    }
+    .footersecundario {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        background-color: rgb(118, 103, 103);
+        color:azure;
+    }
